# atl-security-bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  bot.config.ini  bot.config.ini-example  docker-compose.yml  entrypoint.sh  postgresql-env  pyproject.toml
migrations/: 001_alter_author.sql  002_alter_claims.sql  003_create_refferals.sql  initial.sql
src/: main.py
src/claims/: operations.py
src/core/: database.py  enums.py  filters.py  logger.py  normalizer.py  settings.py  templates.py  transliterate.py  updater.py  updates.py  utils.py  virustotal.py  wrap_handlers.py
src/dto/: author.py  base.py  claim.py  exceptions.py  image.py  models.py  referral.py
src/handlers/: __init__.py  base.py  enums.py  exceptions.py  helpers.py  mode.py  registry.py  states.py
src/handlers/button_cb/: enums.py  klass.py  logic.py
src/handlers/check/: klass.py
src/handlers/check_link/: enums.py  klass.py  logic.py
src/handlers/check_number/: enums.py  klass.py  logic.py
src/handlers/check_username/: enums.py  klass.py  logic.py
src/handlers/commit/: klass.py  logic.py
src/handlers/complain/: enums.py  klass.py  logic.py
src/handlers/help/: klass.py  logic.py
src/handlers/referral/: enums.py  klass.py  logic.py  methods.py
src/handlers/resolve/: klass.py  logic.py
src/handlers/start/: enums.py  klass.py  logic.py
src/helpers/: manage_user.py  notify_bot.py
src/keyboards/: default_handlers.py  menu.py
src/resources/: en.json  ru.json
src/scheduler_jobs/: referrals.py  registry.py
src/templates/: alarm.md  check_link_claim.md  check_number.md  check_phone_claim.md  help.md  init_claim.md  registered_user.md  start.md  start_check.md  total.md
(+5 files in other folders)
